--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "typescript": "^5"
+  },
+  "eslintConfig": {
+    "rules" : {
+      "no-var" : 0
+    }
   }
 }
