--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/s3-request-presigner": "^3.750.0",
     "@tailwindcss/postcss": "^4.0.6",
     "@tailwindcss/vite": "^4.0.6",
+    "framer-motion": "^12.4.10",
     "mongoose": "^8.10.1",
     "next": "15.1.7",
     "react": "^19.0.0",
